[tool.poetry]
name = "tileio"
version = "1.0.0"
description = "Tileio documentation"
license = "BSD-3-Clause"
authors = ["Adam Page <adam.page@ambiq.com>"]
readme = "README.md"
homepage = "https://ambiq.ai"
repository = "https://github.com/AmbiqAI/tileio-docs"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.8"
mkdocstrings-python = "^1.8.0"
markdown-include = "^0.8.1"
mkdocs-exclude = "^1.0.2"
mkdocs-jupyter = "^0.24.8"
mkdocs-gen-files = "^0.5.0"
mkdocs-section-index = "^0.3.9"
mkdocs-literate-nav = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
